--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +16,7 @@
     
     <div class="container">
         <div class="title">
-            <h1 class="text-center">DONA SANGRE DONA VIDA</h1>
+            <h1 class="text-center">DONAR SANGRE ES DONAR VIDA</h1>
         </div>
 
         <div class="text-container">
